GPv3: Add `DrawingTransforms`

Resolves #113424.